Bug fix: Incorrect spacing on Safari

--- a/tutorhdrukfuturestheme/templates/hdrukfuturestheme/lms/static/sass/courseware/_about.scss
+++ b/tutorhdrukfuturestheme/templates/hdrukfuturestheme/lms/static/sass/courseware/_about.scss
@@ -196,6 +196,10 @@
         }
     }
 
+    .safari-wrapper {
+        padding-bottom: 20px;
+    }
+
     .about-content {
         display: flex;
         flex-flow: column-reverse;
